--- a/src/App.scss
+++ b/src/App.scss
@@ -58,6 +58,9 @@ body {
   overflow-x: hidden;
   // display: flex;
   position: relative;
+  // @media (min-width: $tablet) {
+  //   padding: 2rem;
+  // }
 }
 
 /* make images easier to work with */
@@ -76,20 +79,6 @@ select {
 }
 
 body::before {
-  // @media (max-width: $mobile) {
-  //   content: '';
-  //   background: url('./assets/mobile/image-host.jpg');
-  //   background-size: cover;
-  //   background-repeat: no-repeat;
-  //   top: 0;
-  //   right: 0;
-  //   bottom: 0;
-  //   left: 0;
-  //   position: absolute;
-  //   opacity: 0.1;
-  //   z-index: -1;
-  // }
-
   content: '';
   background: url('./assets/mobile/image-host.jpg');
   background-size: cover;
@@ -109,13 +98,15 @@ body::before {
     background-repeat: no-repeat;
     opacity: 1;
   }
-}
-
-body {
-  @media (min-width: $tablet) {
-    padding: 2rem;
+  @media (min-width: $desktop) {
+    background: url('./assets/desktop/image-host.jpg');
+    left: 275px;
+    background-size: inherit;
+    background-repeat: no-repeat;
+    opacity: 1;
   }
 }
+
 header {
   grid-area: header;
 }
@@ -278,20 +269,32 @@ header {
   }
 }
 
+// footer {
+//   display: none;
+//   grid-area: footer;
+
+//   @media (min-width: $tablet) {
+//     display: block;
+//     position: absolute;
+//     bottom: 0;
+//     left: 25px;
+//   }
+//   @media (min-width: $desktop) {
+//     display: block;
+//     position: absolute;
+//     bottom: 100px;
+//     // right: 0;
+//     left: 800px;
+//   }
+// }
 footer {
-  display: none;
   grid-area: footer;
-  @media (min-width: $tablet) {
-    display: block;
-    position: absolute;
-    bottom: 0;
-    left: 25px;
-  }
-  @media (min-width: $desktop) {
-    display: block;
-    position: absolute;
-    bottom: 0;
-    // left: 0;
-    right: 500px;
+
+  img {
+    @media (min-width: $desktop) {
+      position: absolute;
+      right: 0;
+      bottom: 150px;
+    }
   }
 }
